feat: 장소조회 페이지 통합

--- a/src/sources/css/nav.css
+++ b/src/sources/css/nav.css
@@ -67,7 +67,7 @@ nav{
     color: white;
 }
 .menu_icon:hover, .menu_name:hover, .toggle_icon:hover{
-    color: #f7d8d8;
+    color: #738b78;
 }
 .menu_name_itm{
     display: flex;
