--- a/src/sources/css/scanner.css
+++ b/src/sources/css/scanner.css
@@ -15,7 +15,7 @@
     font-size: 2.5rem;
     font-weight: 600;
     color: #343e36;
-    font-family: 'omyu_pretty';
+    font-family: 'SUITE-Regular';
     margin-bottom: 20px;
 }
 .qrbtn{
