--- a/src/sources/css/search.css
+++ b/src/sources/css/search.css
@@ -66,17 +66,18 @@ header{
     width: 100%;
     height: 100%;
     border-radius: 10px;
-    font-size: 100%;
+    font-size: 22px;
     background-color: #343e36;
     border: 1px solid white;
     color: white;
-    font-weight: 600;
+    font-weight: 200;
     letter-spacing: 3.5px;
-    font-family: 'TAEBAEKmilkyway';
+    font-family: 'Pretendard-Regular';
+    padding: 0px 20px;
 }
 
 #search_inn:hover{
-    box-shadow: 0 0 1px 1px #51e3d4;
+    box-shadow: 0 0 1px 1px #738b78;
 }
 
 .icon{
