feat : 검색결과페이지 수정

--- a/src/sources/css/nav.css
+++ b/src/sources/css/nav.css
@@ -63,10 +63,8 @@ nav{
     font-size : 18px; 
     font-weight : 600;
 }
-.toggle_icon{
-    color: white;
-}
-.menu_icon:hover, .menu_name:hover, .toggle_icon:hover{
+
+.menu_icon:hover, .menu_name:hover{
     color: #738b78;
 }
 .menu_name_itm{
