feat : QR 모달창 통합

--- a/src/sources/css/event.css
+++ b/src/sources/css/event.css
@@ -18,3 +18,9 @@
 .btn_salelist:hover, .btn_delete:hover{
     background-color:#f3f0e1
 }
+.hoverBtn_white{
+    background-color: white;
+}
+.hoverBtn_white:hover{
+    background-color: #f3f0e1;
+}
