feat : QR모달창 수정

--- a/src/sources/css/scanner.css
+++ b/src/sources/css/scanner.css
@@ -26,7 +26,7 @@
     border:1px solid #d5d5d5;
 }
 #qrbtn{
-    background-image: url("../image/scan_img.jpg");
+    background-image: url("../image/logo1.png");
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
