--- a/src/sources/css/findpwd.css
+++ b/src/sources/css/findpwd.css
@@ -67,9 +67,9 @@
     margin: 5px;
     transition: all 0.375s;
 }
-.form>input:hover{
+/* .form>input:hover{
     border: 2px solid #000;
-}
+} */
 .form>input::placeholder{
     color: #114c16;
     font-size: 15px;
@@ -78,13 +78,13 @@
 .form>button{
     cursor: pointer;
     width: 100%;
-    height: 40px;
-    width: 150px;
+    height: 30px;
+    width: 140px;
     background: linear-gradient(to right, rgb(165, 197, 117), #056D1C);
     color: #f5f5f5;
     border: 0;
     font-family: inherit;
-    font-size: 15px;
+    font-size: 13px;
     font-weight: 600;
     text-align: center;
     letter-spacing: 2px;
@@ -116,16 +116,15 @@
 .backbutton{
     cursor: pointer;
     width: 100%;
-    height: 40px;
+    height: 30px;
     width: 100px;
     border-radius: 20px;
     background: linear-gradient(to right, #056D1C, rgb(165, 197, 117));
     color: #f5f5f5;
     border: 0;
     font-family: inherit;
-    font-size: 18px;
+    font-size: 15px;
     font-weight: 600;
-    text-align: center;
     transition: all 0.375s;
 }
 .backbutton:hover{
