--- a/src/sources/css/findpwd.css
+++ b/src/sources/css/findpwd.css
@@ -26,11 +26,12 @@
     border-radius: inherit;
     background:  linear-gradient(to right, #056D1C, #1e3322);
 }
-.card{
+.card_pwd{
     overflow: hidden;
     position: relative;
     z-index: 3;
     width: 360px;
+    height: 430px;
     top: 20vmin;
     margin: 0 20px;
     padding: 40px 30px 38px;
@@ -39,32 +40,36 @@
     text-align: center;
     box-shadow: 0 100px 100px rgb(0,0,0/ 10%);
 }
-.card>h2{
+.card_pwd>h2{
     font-size: 28px;
     font-weight: 900;
-    margin: 0px;
+    margin: 0 0 3px;
+    color: darkgreen;
+}
+.card_pwd>h4{
+    font-size: 18px;
+    font-weight: 400;
+    margin: 0 0 30px;
     color: darkgreen;
 }
 .form{
     margin: 0 0 30px;
-    /* display: grid; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     gap: 11px;
 }
 .form>input, .form>button{
     width: 100%;
     height: 150%;
-    border-radius: 20px;
+    border-radius: 10px;
 }
 .form>input{
     border: 1px solid #80ca90;
     font-family: inherit;
-    width: 300px;
     font-size: 16px;
-    padding: 10 20px;
-    padding-left: 15px;
-    color: #25842d;
+    padding: 0 24px;
     height: 40px;
-    margin: 5px;
     transition: all 0.375s;
 }
 /* .form>input:hover{
@@ -78,13 +83,12 @@
 .form>button{
     cursor: pointer;
     width: 100%;
-    height: 30px;
-    width: 140px;
+    height: 40px;
     background: linear-gradient(to right, rgb(165, 197, 117), #056D1C);
     color: #f5f5f5;
     border: 0;
     font-family: inherit;
-    font-size: 13px;
+    font-size: 1rem;
     font-weight: 600;
     text-align: center;
     letter-spacing: 2px;
@@ -94,13 +98,14 @@
     color: #fff;
     background: #11274c;
 }
-.card>footer{
+.card_pwd>footer{
     color: darkgreen;
 }
-.card>footer>a{
+.card_pwd>footer>a{
+    color: #073e0c;
     transition: all 0.375s;
 }
-.card>footer>a:hover{
+.card_pwd>footer>a:hover{
     color: rgb(92, 182, 92);
 }
 .form1 {
@@ -116,22 +121,23 @@
 .backbutton{
     cursor: pointer;
     width: 100%;
-    height: 30px;
-    width: 100px;
-    border-radius: 20px;
+    height: 40px;
+    width: 50%;
+    border-radius: 10px;
     background: linear-gradient(to right, #056D1C, rgb(165, 197, 117));
     color: #f5f5f5;
     border: 0;
     font-family: inherit;
-    font-size: 15px;
+    font-size: 16px;
     font-weight: 600;
+    letter-spacing: 3px;
     transition: all 0.375s;
 }
 .backbutton:hover{
     color: #fff;
     background: #11274c;
 }
-.card>h4{
+.card_pwd>h4{
     font-size: 18px;
     font-weight: 400;
     margin: 0 0 30px;
