--- a/src/sources/css/login.css
+++ b/src/sources/css/login.css
@@ -16,7 +16,6 @@
     
     border-radius: 47% 53% 61% 39% / 45% 51% 49% 55%;
     background: linear-gradient(to right, #0b541b, rgb(165, 197, 117));
-    /* background: rgb(165, 197, 117); */
 }
 .circle::after{
     content: "";
@@ -26,7 +25,6 @@
     width: inherit;
     height: inherit;
     border-radius: inherit;
-    /* background: rgb(14, 95, 17); */
     background:  linear-gradient(to right, #056D1C, #1e3322);
 }
 .card_login{
@@ -34,12 +32,11 @@
     position: relative;
     z-index: 3;
     width: 360px;
-    height: 400px;
-    top: 30vmin;
+    height: 430px;
+    top: 20vmin;
     margin: 0 20px;
     padding: 40px 30px 38px;
     border-radius: 1.25rem;
-    
     background: #fff;
     text-align: center;
     box-shadow: 0 100px 100px rgb(0,0,0/ 10%);
@@ -58,29 +55,30 @@
 }
 .form_login{
     margin: 0 0 30px;
-    display: grid;
-    gap: 18px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 11px;
 }
 .form_login>input, .form_login>button{
     width: 100%;
     height: 150%;
-    border-radius: 20px;
-    
+    border-radius: 10px;
 }
 .form_login>input{
     border: 1px solid #80ca90;
     font-family: inherit;
     font-size: 16px;
     padding: 0 24px;
-    color: #114c16;
     transition: all 0.375s;
+    height: 40px;
 }
 /* .form_login>input:hover{
     border: 2px solid #000;
 } */
 .form_login>input::placeholder{
     color: #114c16;
-    font-size: 13px;
+    font-size: 15px;
     font-weight: 500;
 }
 .form_login>button{
